﻿2007-01-15  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/header.txt, NEWS, README: Updated release date.

2007-01-14  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/updatewindow.cpp, src/main.cpp, tmw.cbp: Fixed windows
	headers issues.

2007-01-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/main.cpp, src/gui/trade.cpp, src/gui/sell.cpp,
	src/gui/connection.cpp, src/gui/buddywindow.cpp, src/gui/browserbox.h,
	src/gui/char_server.cpp, src/gui/window.cpp, src/gui/login.cpp,
	src/gui/inttextbox.h, src/gui/viewport.cpp, src/gui/button.h,
	src/gui/shoplistbox.h, src/gui/skill.h, src/gui/item_amount.h,
	src/gui/setup_audio.h, src/gui/newskill.cpp, src/gui/listbox.h,
	src/gui/register.h, src/gui/setup.cpp, src/gui/npclistdialog.h,
	src/gui/updatewindow.cpp, src/gui/button.cpp, src/gui/char_select.cpp,
	src/gui/login.h, src/gui/setup_audio.cpp, src/gui/item_amount.cpp,
	src/gui/setup_joystick.h, src/gui/chat.h, src/gui/npc_text.cpp,
	src/gui/setup_video.cpp, src/gui/ok_dialog.cpp,
	src/gui/inventorywindow.h, src/gui/gccontainer.cpp,
	src/gui/newskill.h, src/gui/buy.h, src/gui/setup.h,
	src/gui/itemcontainer.h, src/gui/confirm_dialog.cpp,
	src/gui/debugwindow.cpp, src/gui/chat.cpp, src/gui/setup_joystick.cpp,
	src/gui/updatewindow.h, src/gui/char_select.h, src/gui/buysell.h,
	src/gui/tabbedcontainer.cpp, src/gui/inventorywindow.cpp,
	src/gui/help.cpp, src/gui/status.h, src/gui/npc_text.h,
	src/gui/setup_video.h, src/gui/menuwindow.cpp, src/gui/browserbox.cpp,
	src/gui/ok_dialog.h, src/gui/buy.cpp, src/gui/itemcontainer.cpp,
	src/gui/gccontainer.h, src/gui/buddywindow.h, src/gui/sell.h,
	src/gui/trade.h, src/gui/inttextbox.cpp, src/gui/char_server.h,
	src/gui/window.h, src/gui/shoplistbox.cpp, src/gui/skill.cpp,
	src/gui/buysell.cpp, src/gui/confirm_dialog.h, src/gui/debugwindow.h,
	src/gui/status.cpp, src/gui/listbox.cpp, src/gui/register.cpp,
	src/gui/viewport.h, src/gui/tabbedcontainer.h,